--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -6,27 +6,30 @@
   margin-bottom: 1em;
 }
 
-.block.quote blockquote:not(.isEmpty) {
+html {
   &[lang='de'] {
-    p {
-      &::before {
-        content: '„';
-      }
+    .block.quote blockquote:not(.isEmpty) {
+      p {
+        &::before {
+          content: '„';
+        }
 
-      &::after {
-        content: '“';
+        &::after {
+          content: '“';
+        }
       }
     }
   }
-
   &[lang='en'] {
-    p {
-      &::before {
-        content: '"';
-      }
+    .block.quote blockquote:not(.isEmpty) {
+      p {
+        &::before {
+          content: '"';
+        }
 
-      &::after {
-        content: '"';
+        &::after {
+          content: '"';
+        }
       }
     }
   }
